chore: Added unit tests with MockWebServer